--- a/Blog.Client/Components/Pages/Author/Components/Pending.razor
+++ b/Blog.Client/Components/Pages/Author/Components/Pending.razor
@@ -266,7 +266,7 @@
             isLoading = true;
             StateHasChanged();
 
-            var response = await PostClient.GetListAuthorRequest(PaginationPending);
+            var response = await PostClient.ListAuthorRequest(PaginationPending);
 
             if (response?.Value is not null)
             {
