--- a/Blog.Client/Components/_Imports.razor
+++ b/Blog.Client/Components/_Imports.razor
@@ -43,6 +43,9 @@
 @using TinyMCE.Blazor
 @using static BlogApi.Domain.Enums.EntityEnum
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
+@using Blog.Application.Request.Tag
+
+
 
 
 
